--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,29 @@
-PORT=3001
-BASE_URL=http://103.109.187.193:3000
+# File: .env
+
+# API_PORT: Cổng mà API sẽ chạy trên máy. Mặc định là 3001. Thay đổi nếu cần cổng khác.
+API_PORT=3001
+
+# API_IP: Địa chỉ IP mà API sẽ lắng nghe. 
+# - Đặt '0.0.0.0' để lắng nghe trên tất cả giao diện mạng (cho phép truy cập từ bất kỳ IP nào).
+# - Thay bằng IP cụ thể của máy (ví dụ: 192.168.1.100) nếu muốn giới hạn.
+API_IP=0.0.0.0
+
+# API_BASE_URL: URL cơ sở cho API, dùng để tạo link QR trong pdf.controller.js và qr.controller.js.
+# - Thay ${API_IP} bằng IP máy hoặc để trống để config.js dùng mặc định (http://localhost:3000).
+# - Đảm bảo port trong URL khớp với port của client (thường là 3000).
+API_BASE_URL=http://localhost:3000
+
+# DATABASE_URL: Chuỗi kết nối đến cơ sở dữ liệu PostgreSQL.
+# - Không cần thay đổi trừ khi dùng database khác.
+# - Định dạng: postgresql://user:password@host:port/dbname
 DATABASE_URL=postgresql://postgres.ritlicmunjiuvauvnfth:1brmmvKf3iZ8svet@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
-CLIENT_URL=http://103.109.187.193:3000
+
+# CLIENT_URL: URL của client (frontend) gọi API, dùng để cấu hình CORS trong index.js.
+# - Thay ${API_IP} bằng IP máy hoặc để trống để config.js dùng mặc định (http://localhost:3000).
+# - Đảm bảo khớp với URL của frontend.
+CLIENT_URL=http://localhost:3000
+
+# ALLOWED_ORIGINS: Danh sách các origin được phép gọi API (CORS).
+# - Đặt '*' để cho phép mọi origin (phù hợp khi test trên máy bất kỳ).
+# - Hoặc liệt kê các origin cụ thể, cách nhau bằng dấu phẩy (ví dụ: http://192.168.1.100:3000,http://other-url:port).
+ALLOWED_ORIGINS=*
